--- a/mainApp/templates/email_template.html
+++ b/mainApp/templates/email_template.html
@@ -82,7 +82,7 @@
 
         <h1>Email Sending Form</h1>
 
-        <form action="/send-email/" method="post">
+        <form action="/send-email/" method="POST">
 
             {% csrf_token %}
 
